--- a/src/erlang/rebar.config
+++ b/src/erlang/rebar.config
@@ -2,7 +2,8 @@
 
 {deps, [
     {cowboy, "2.12.0"},
-    {jsx, "3.1.0"}  % JSON encoding/decoding
+    {jsx, "3.1.0"},  % JSON encoding/decoding
+    {jose, "1.11.10"}  % JWT library
 ]}.
 
 {relx, [
