--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,11 @@ RUN mvn clean package
 # Run stage
 FROM tomcat:10.1-jdk17-temurin
 RUN rm -rf /usr/local/tomcat/webapps/*
+
+# Copy custom server.xml with thread pool configuration
+COPY server.xml /usr/local/tomcat/conf/server.xml
+
 # Copy the WAR file from build stage to Tomcat webapps
-RUN ls -R 
 COPY --from=build /app/target/auction-system.war /usr/local/tomcat/webapps/ROOT.war
 
 EXPOSE 8080
