Add Erlang backend and auction management features
- Implemented Erlang service in Docker with HTTP/WebSocket support.
- Created AuctionViewServlet and JoinAuctionServlet for auction viewing and joining.
- Enhanced AuctionStarterJob to notify Erlang API on auction start.
- Added JSP pages for auction viewing and error handling.
- Updated browse-auctions.jsp to allow users to join auctions via AJAX.
- Adjusted HTTP ports and API endpoints for consistency across services.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -41,6 +41,23 @@ services:
       timeout: 5s
       retries: 5
 
+  ### Erlang Backend
+  erlang:
+
+    ### Build configuration for the Erlang service
+    build:
+      context: ../src/erlang
+      dockerfile: Dockerfile
+    container_name: auction-erlang
+    
+    ### Port mapping to expose the Erlang HTTP/WebSocket service on port 8081
+    ports:
+      - "8081:8081"
+    
+    ### Service dependencies
+    # The Erlang service can start independently
+    restart: unless-stopped
+
   ### Java Backend
   backend:
 
@@ -54,6 +71,11 @@ services:
     ### Port mapping to expose the backend service on port 8080
     ports:
       - "8080:8080"
+    
+
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
     
     ### Environment variables for database connection
     # These should match the MySQL service configuration and will be used by the backend 
