Enhance auction functionality with bid increments and time management
- Added support for minimum bid increment and time increment for auctions.
- Updated auction handler to manage time increments when bids are placed.
- Modified server and POST handler to accept new parameters for auction registration.
- Enhanced test client to include fields for bid increment and time increment.
- Updated documentation to reflect changes in auction registration process.

--- a/src/erlang/Dockerfile
+++ b/src/erlang/Dockerfile
@@ -10,14 +10,14 @@ WORKDIR /app
 # Copy rebar3 config first for dependency caching
 COPY rebar.config .
 
-# Fetch dependencies
-RUN rebar3 get-deps
+# Fetch and compile dependencies (cached layer)
+RUN rebar3 get-deps && rebar3 compile
 
 # Copy source files and Makefile
 COPY src ./src
 COPY Makefile .
 
-# Compile the project
+# Compile only the application code (dependencies already compiled)
 RUN make
 
 # Expose the HTTP port
